# PCAT_open_source

./: .gitignore  Nullmax点云标注工具使用手册.md  README.md  install.sh  raw2pcd  run.sh  uninstall.sh
.ros/rosdep/sources.cache/: index
devel/: .catkin  .rosinstall  setup.sh
devel/include/rviz_cloud_annotation/: RectangleSelectionViewport.h  UndoRedoState.h
devel/lib/python2.7/dist-packages/rviz_cloud_annotation/msg/: _RectangleSelectionViewport.py  _UndoRedoState.py  __init__.py
devel/lib/rviz_cloud_annotation/: rviz_cloud_annotation_node
devel/share/common-lisp/ros/rviz_cloud_annotation/msg/: RectangleSelectionViewport.lisp  UndoRedoState.lisp  _package.lisp  _package_RectangleSelectionViewport.lisp  _package_UndoRedoState.lisp  rviz_cloud_annotation-msg.asd
devel/share/gennodejs/ros/rviz_cloud_annotation/msg/: RectangleSelectionViewport.js  UndoRedoState.js  _index.js
devel/share/roseus/ros/rviz_cloud_annotation/: manifest.l
devel/share/roseus/ros/rviz_cloud_annotation/msg/: RectangleSelectionViewport.l  UndoRedoState.l
devel/share/rviz_cloud_annotation/cmake/: rviz_cloud_annotation-msg-paths.cmake
src/: .rosinstall
src/rviz_cloud_annotation/: CMakeLists.txt  package.xml
src/rviz_cloud_annotation/CMakeLists/: CMakeLists.txt  CMakeLists_all.txt  CMakeLists_generate_iso.txt  CMakeLists_raw.txt
src/rviz_cloud_annotation/launch/: annotation.launch
src/rviz_cloud_annotation/msg/: RectangleSelectionViewport.msg  UndoRedoState.msg
src/rviz_cloud_annotation/pc_utils/: CMakeLists.txt
src/rviz_cloud_annotation/pc_utils/include/pc_utils/bound/: OBB.h  box_extract.h
src/rviz_cloud_annotation/pc_utils/include/pc_utils/common/: common.h  lidar_device.h  parameter.h  point_type.h  utils.h
src/rviz_cloud_annotation/pc_utils/include/pc_utils/common/detail/: factory.h  type_util.h
src/rviz_cloud_annotation/pc_utils/include/pc_utils/filter/: cloud_filter.h
src/rviz_cloud_annotation/pc_utils/include/pc_utils/seg/: cluster.h  ground_estimator.h
src/rviz_cloud_annotation/pcl_include/: colors.cpp
src/rviz_cloud_annotation/pcl_include/pcl/common/: colors.h
src/rviz_cloud_annotation/rviz/: annotation.rviz
src/rviz_cloud_annotation/rviz_plugin/: cloud_annotation.xml
src/rviz_cloud_annotation/src/: point_cloud_feature_plane.cpp  point_cloud_feature_plane.h  point_cloud_plane_curves_extract.cpp  point_cloud_plane_curves_extract.h  point_cloud_plane_params.cpp  point_cloud_plane_params.h  point_neighborhood.cpp  point_neighborhood.h  point_neighborhood_search.cpp  point_neighborhood_search.h  rviz_cloud_annotation.cpp  rviz_cloud_annotation.h  rviz_cloud_annotation_class.cpp  rviz_cloud_annotation_class.h  rviz_cloud_annotation_params.h  rviz_cloud_annotation_plugin.cpp  rviz_cloud_annotation_plugin.h  rviz_cloud_annotation_point_plane.cpp  rviz_cloud_annotation_point_plane.h  rviz_cloud_annotation_points.cpp  rviz_cloud_annotation_points.h  rviz_cloud_annotation_points_io.cpp  rviz_cloud_annotation_undo.cpp  rviz_cloud_annotation_undo.h  rviz_select_tool.cpp  rviz_select_tool.h
tools/: clear_annotation.sh  install_annotation.sh  launch_annotation.sh  pcd_play  ros_debug.sh  uninstall_annotation.sh
示例pcd文件/pcd/: 000007.pcd  000008.pcd  16line.pcd  64line.pcd
