<?xml version="2.0"?>
<package>
  <name>rviz_cloud_annotation</name>
  <version>2.3.0</version>
  <description>The rviz_cloud_annotation package</description>

  <maintainer email="wwdu@nullmax.ai">wwdu</maintainer>
  <license>Nullmax</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>

  <run_depend>interactive_markers</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugin/cloud_annotation.xml"/>
  </export>
</package>
